--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#2a2d5a</color>
+    <color name="colorPrimaryDark">#2e3161</color>
+    <color name="colorAccent">#fdcc51</color>
+    <color name="colorMenuBlue">#00bcfc</color>
+    <color name="colorMenuViolet">#5467e8</color>
+    <color name="colorMenuPink">#ff425d</color>
+    <color name="colorActionBarTitle">#bdc5de</color>
+    <color name="colorSecondMenuButtons">#45497d</color>
+    <color name="colorWhite">#fff</color>
 </resources>
