--- a/app/src/main/res/layout/activity_audio_files.xml
+++ b/app/src/main/res/layout/activity_audio_files.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context="com.grzegorzkwasniewski.speakloud.activities.RecordingsActivity">
+    tools:context=".audioFilesView.AudioFilesActivity">
 
     <include
         android:id="@+id/toolbar"
