--- a/app/src/main/res/layout/fragment_confirmation.xml
+++ b/app/src/main/res/layout/fragment_confirmation.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="popUp.PermissionDialogFragment">
+    tools:context=".popUp.ConfirmationDialog">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
