--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -11,6 +11,7 @@
 
     <android.support.constraint.ConstraintLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
+        android:contentDescription="@string/saved_audio_file"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -34,6 +35,7 @@
 
         <TextView
             android:id="@+id/file_name"
+            android:contentDescription="@string/saved_audio_file"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -57,6 +59,7 @@
 
         <TextView
             android:id="@+id/file_length"
+            android:contentDescription="@string/saved_audio_file"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -76,6 +79,7 @@
 
         <TextView
             android:id="@+id/file_date_added"
+            android:contentDescription="@string/audio_date_created"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
