--- a/app/src/main/res/layout/fragment_about_dialog.xml
+++ b/app/src/main/res/layout/fragment_about_dialog.xml
@@ -9,6 +9,7 @@
 
     <TextView
         android:id="@+id/about_text"
+        android:contentDescription="@string/about_info"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
