--- a/app/src/main/res/layout/fragment_permission_dialog.xml
+++ b/app/src/main/res/layout/fragment_permission_dialog.xml
@@ -7,6 +7,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:contentDescription="@string/access_denied"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="0dp"
