--- a/app/src/main/res/layout/fragment_recording.xml
+++ b/app/src/main/res/layout/fragment_recording.xml
@@ -15,6 +15,7 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/record_button"
+            android:contentDescription="@string/record_audio_button"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginBottom="18dp"
@@ -32,6 +33,7 @@
 
         <Chronometer
             android:id="@+id/chronometer"
+            android:contentDescription="@string/chronometer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
