--- a/app/src/main/res/layout/rename_file_dialog.xml
+++ b/app/src/main/res/layout/rename_file_dialog.xml
@@ -9,12 +9,14 @@
 
     <EditText
         android:id="@+id/new_name"
+        android:hint="@string/new_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
     <TextView
         android:id="@+id/textView"
+        android:contentDescription="@string/file_extension"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=".mp4" />
