UPDATE Remove Hardcoded Strings

--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -44,7 +44,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:fontFamily="sans-serif-condensed"
-            android:text="file_name"
+            android:text="@string/file_name"
             android:textColor="@android:color/white"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -66,7 +66,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:fontFamily="sans-serif-condensed"
-            android:text="00:00"
+            android:text="@string/_00_00"
             android:textColor="@android:color/white"
             android:textSize="14sp"
             card_view:layout_constraintLeft_toLeftOf="parent"
@@ -87,7 +87,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:fontFamily="sans-serif-condensed"
-            android:text="mmm dd yyyy - hh:mm a"
+            android:text="@string/mmm_dd_yyyy_hh_mm_a"
             android:textColor="@android:color/white"
             android:textSize="14sp"
             card_view:layout_constraintBottom_toBottomOf="parent"
