--- a/app/src/main/res/layout/fragment_play_audio_fragmnet.xml
+++ b/app/src/main/res/layout/fragment_play_audio_fragmnet.xml
@@ -18,7 +18,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="25dp"
         android:fontFamily="sans-serif-condensed"
-        android:text="file_name.mp4"
+        android:text="@string/file_name_mp4"
         android:textSize="18sp"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="0dp"
         android:layout_marginTop="7dp"
-        android:text="00:00"
+        android:text="@string/_00_00"
         app:layout_constraintRight_toRightOf="@+id/file_name"
         app:layout_constraintTop_toBottomOf="@+id/file_name"
         tools:layout_conversion_absoluteHeight="16dp"
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="7dp"
-        android:text="00:00"
+        android:text="@string/_00_00"
         app:layout_constraintLeft_toLeftOf="@+id/file_name"
         app:layout_constraintTop_toBottomOf="@+id/file_name"
         tools:layout_conversion_absoluteHeight="16dp"
