--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_margin="8dp"
-        android:contentDescription="Widget"
+        android:contentDescription="@string/widget"
         android:textColor="@color/cardview_light_background"
         android:textSize="18sp"
         android:textStyle="bold|italic"
