--- a/app/src/main/res/layout/activity_audio_files.xml
+++ b/app/src/main/res/layout/activity_audio_files.xml
@@ -18,10 +18,11 @@
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="0dp"
+        android:layout_marginEnd="0dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="0dp"
-        app:layout_constraintHorizontal_bias="1.0" />
+        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginRight="0dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
