--- a/app/src/main/res/layout/fragment_play_audio_fragmnet.xml
+++ b/app/src/main/res/layout/fragment_play_audio_fragmnet.xml
@@ -34,7 +34,7 @@
         android:contentDescription="@string/audio_file_length"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="0dp"
+        android:layout_marginEnd="0dp"
         android:layout_marginTop="7dp"
         android:text="@string/_00_00"
         app:layout_constraintRight_toRightOf="@+id/file_name"
@@ -42,14 +42,15 @@
         tools:layout_conversion_absoluteHeight="16dp"
         tools:layout_conversion_absoluteWidth="35dp"
         tools:layout_conversion_absoluteX="328dp"
-        tools:layout_conversion_absoluteY="271dp" />
+        tools:layout_conversion_absoluteY="271dp"
+        android:layout_marginRight="0dp" />
 
     <TextView
         android:id="@+id/progress"
         android:contentDescription="@string/audio_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="7dp"
         android:text="@string/_00_00"
         app:layout_constraintLeft_toLeftOf="@+id/file_name"
@@ -57,7 +58,8 @@
         tools:layout_conversion_absoluteHeight="16dp"
         tools:layout_conversion_absoluteWidth="35dp"
         tools:layout_conversion_absoluteX="20dp"
-        tools:layout_conversion_absoluteY="271dp" />
+        tools:layout_conversion_absoluteY="271dp"
+        android:layout_marginLeft="0dp" />
 
     <SeekBar
         android:id="@+id/search_bar"
@@ -82,7 +84,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="10dp"
         android:clickable="true"
         android:src="@drawable/ic_play_arrow_white_48dp"
@@ -97,6 +99,7 @@
         tools:layout_conversion_absoluteHeight="40dp"
         tools:layout_conversion_absoluteWidth="40dp"
         tools:layout_conversion_absoluteX="172dp"
-        tools:layout_conversion_absoluteY="290dp" />
+        tools:layout_conversion_absoluteY="290dp"
+        android:layout_marginRight="8dp" />
 
 </android.support.constraint.ConstraintLayout>
